--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
     "@tanstack/react-table": "^8.20.5",
     "@tiptap/extension-placeholder": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
@@ -57,6 +59,7 @@
     "resend": "^4.0.0",
     "sanitize-html": "^2.13.0",
     "sonner": "^1.5.0",
+    "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.3",
