--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
     "@uploadthing/react": "^6.8.0",
-    "algoliasearch": "4",
+    "algoliasearch": "^5.6.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -56,6 +56,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-instantsearch": "^7.13.2",
+    "react-instantsearch-nextjs": "^0.3.12",
+    "recharts": "^2.12.7",
     "resend": "^4.0.0",
     "sanitize-html": "^2.13.0",
     "sonner": "^1.5.0",
